# anthropic-eval

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  ECOSYSTEM.md  README.md  SECURITY.md  TRANSFORMATION_DEMO.md  ai-ecosystem-registry.json  ai.config.json  eslint.config.js  justfile  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
agentinterface/: .gitignore  README.md  justfile  package.json
agentinterface/cli/: index.js
agentinterface/docs/: ANTHROPIC.md  EXAMPLES.md
agentinterface/python/: .gitignore  pyproject.toml
agentinterface/python/tests/: test_llms.py
agentinterface/scripts/: discover.mjs
agentinterface/src/: index.ts  renderer.tsx  styles.css
agentinterface/src/ai/: card.tsx  markdown.tsx  table.tsx  tabs.tsx  tree.tsx
agentinterface/src/styles/: semantic.css
agentinterface/src/ui/: badge.tsx  index.ts
cogency/docs/: ARCHITECTURE.md
core/: README.md  models.py  schemas.json  schemas.py  validators.py
docs/: ARCHITECTURE.md  agent-training.md  architecture-update.md  architecture.md  extensibility.md  frontiers.md  progress.md  timeline.md  trajectory.md  zealot.md
docs/archive/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  aip-roadmap.md  components.md  primitives.md  protocol.md
examples/javascript/: README.md
examples/js/: basic-usage.tsx
examples/python/: README.md  basic_usage.py
js/: .prettierignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs  test-recursive-parser.js  tsconfig.json  tsup.config.ts
js/scripts/: build-registry.mjs
js/src/: index.ts
js/src/cli/: index.ts
js/src/components/: AgentInterfaceRenderer.tsx  MarkdownRenderer.tsx  RecursiveRenderer.tsx  UnifiedRenderer.tsx  blog-post.tsx  card-grid.tsx  code-snippet.tsx  expandable-detail.tsx  expandable-sections.tsx  index.ts  inline-link.tsx  inline-references.tsx  key-insights.tsx  markdown.tsx  renderer.tsx  tech-deep-dive.tsx  timeline.tsx
js/src/core/: InterfaceErrorBoundary.tsx  component-resolver.ts  core-schemas.ts  index.ts  inline-components.ts  remark-inline-components.ts  remark-inline-components.tsx  schemas.ts  types.ts  validation.ts
js/src/dev/: DevAgentInterfaceRenderer.tsx  README.md  ThemeTestingPanel.tsx  darkModeValidator.ts  devtools.tsx  errorHandler.ts  filesystem-discovery.tsx  hot-reload.tsx  index.ts  themeIntegration.ts  vite-plugin.ts
js/src/hooks/: useAIPComponent.ts  useAgentResponseParser.ts  useInterfaceConfig.ts
js/src/integrations/: index.ts  next.ts  webpack.ts
js/src/parser/: recursive.ts
js/src/playground/: ComponentPlayground.tsx  index.ts  test-playground.html
js/src/portfolio/: index.ts  schemas.ts
js/src/protocol/: core-components.ts  index.ts  interface-registry.md  registry.ts  schemas.ts
js/src/react/: AgentInterfaceRenderer.tsx  ComponentErrorBoundary.tsx  index.ts
js/src/registry/: auto.ts  builder.ts  generator.ts  index.ts  lazy.ts  magic.ts  primitives.ts  setup.ts  simple.ts  unified.ts
js/src/types/: index.ts
js/src/utils/: componentProps.ts  index.ts  parsing.ts  performance.ts  (+1 more)
js/tests/: DevAgentInterfaceRenderer.test.tsx  components.test.ts  filesystemDiscovery.test.tsx  hot-reload.test.tsx
python/: README.md  REQUIREMENTS.md  pyproject.toml  test_ai_interface.py  test_autodiscovery.py  test_ecosystem.py
python/scripts/: generate_docs.py
python/src/agentinterface/: __init__.py  ai.py  aip.py  constants.py  inline_resolver.py  interactive.py  protocol.py  providers.py  registry.json  registry.py  selector.py  shaper.py
python/src/agentinterface/core/: __init__.py  interface_service.py
python/src/agentinterface/processors/: __init__.py  response_shaper.py
python/src/agentinterface/registry/: __init__.py  auto.py  core.py  magic.py
python/tests/: test_basic.py  test_behavior.py  test_core.py  test_integration.py  test_minimal.py
src/: prose.tsx  renderer.tsx  types.d.ts
src/ai/: accordion.tsx  code.tsx  gallery.tsx  index.ts  insights.tsx  markdown.tsx  reference.tsx  suggestions.tsx  table.tsx  tabs.tsx  timeline.tsx
src/lib/: utils.ts
tests/: autodiscovery.test.js  nesting.html
website/: .dockerignore  .prettierrc  astro.config.mjs  eslint.config.js  fly.toml  justfile  package.json  pnpm-lock.yaml  tailwind.config.mjs
website/public/: robots.txt
writing/: 1_haven.md  2_copy-paste.md  3_zealot.md  4_streaming.md  5_agent-interface.md  6_coordination.md  7_activation-transfer.md  8_hybrid-researcher.md
(+96 files in other folders)
