[tool.poetry]
name = "agentinterface-root"
version = "0.1.0"
description = "Root project for AgentInterface monorepo"
authors = ["Tyson Chan <tyson.chan@proton.me>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
