[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "agentinterface"
version = "0.0.2"
description = "Agent Interface Protocol (AIP) - Python implementation for conversational AI agents"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tyson Chan", email = "tyson.chan@proton.me"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]
keywords = ["ai", "agent", "interface", "ui", "conversational", "protocol"]
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0"
]

[project.urls]
Homepage = "https://agentinterface.dev"
Documentation = "https://agentinterface.dev/docs"
Repository = "https://github.com/iteebz/agentinterface"
Issues = "https://github.com/iteebz/agentinterface/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"